Thu May  6 09:21:59 2004  Chad Elliott  <elliott_c@ociweb.com>

        * templates/em3vcp.mpd:
        * templates/nmake.mpd:
        * templates/vc6dsp.mpd:
        * templates/vc7.mpd:

          Added a template name, link_options, to allow users to inject MS
          linker options into the generated projects.

Wed May  5 12:34:51 2004  Chad Elliott  <elliott_c@ociweb.com>

        * modules/Creator.pm:
        * modules/ProjectCreator.pm:

          Changed the way that duplication additions for libpaths, includes
          and libs are handled.  We now silently ignore duplicate additions
          and maintain original assignment order.  This fixes problems with
          static linking on UNIX.

Tue May  4 07:40:02 2004  Chad Elliott  <elliott_c@ociweb.com>

        * README:

          Updated information about the use of 'gendir' without
          'output_option' set in a custom file definition.

Mon May  3 23:12:37 2004  Ossama Othman  <ossama@dre.vanderbilt.edu>

        * config/openssl.mpb:

          Some Linux OpenSSL installations compile in Kerberos support.
          Add the Kerberos include path to preprocessor include path.

Mon May  3 12:17:10 2004  Chad Elliott  <elliott_c@ociweb.com>

        * modules/ProjectCreator.pm:

          By default, refer to the dll based template input files for static
          template input.  If the template supports generating static
          projects, then the project creator module will have overridden
          the methods to return the correct template input files.

        * templates/bmake.mpd:
        * templates/em3vcp.mpd:
        * templates/nmake.mpd:
        * templates/vc6dsp.mpd:
        * templates/vc7.mpd:

          These template files have been changed in a similar fashion to
          Justin Michel's changes from Sat May  1 15:20:00 2004.

Mon May  3 10:49:28 2004  Chad Elliott  <elliott_c@ociweb.com>

        * modules/ProjectCreator.pm:
